@@ -1,0 +1,8 @@
+seq1	0	100	.	10
+seq1	100	200	.	15
+seq1	200	300	.	20
+seq1	300	400	.	10
+seq1	400	500	.	12
+seq2	0	150	.	50
+seq2	150	300	.	80
+seq2	300	750	.	10
